# predict

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  pyproject.toml
predict/: annotations.py  app.py  autorestrictor.py  pinned_plugin.py  prediction.py  sky_model.py  utils.py
tests/: test_annotations.py
