[tool.poetry]
name = "predict"
version = "0.1.0"
description = ""
authors = ["Simon Perkins <simon.perkins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
dask-ms = {extras = ["complete"], version = "^0.2.17"}
codex-africanus = "^0.3.3"
distributed = "^2023.7.1"
bokeh = "^2.0.0"

[tool.isort]
profile = 'black'



[tool.poetry.scripts]
predict = "predict.app:main"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipython = "^8.6.0"
pre-commit = "^2.20.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
